# IDT_SjS_gland

./: .dockerignore  .gitignore  CLAUDE.md  CONVENTIONS.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  journal.md  pyproject.toml
.github/workflows/: ci.yml
01_disease_map/: SjD_Map_original.xml  assembly_report.md  assembly_summary.json  audit_celltype_hits.tsv  audit_intercellular_pivots.tsv  audit_report.md  audit_summary.json  dissociation_report.md  dissociation_rules.md  dissociation_summary.json  extracellular_nodes.tsv  intercellular_edges.tsv  intercellular_edges_report.md  intercellular_edges_skipped.tsv  intercellular_edges_summary.json  node_to_celltype.tsv  unassigned_nodes.tsv
01_disease_map/celltype_modules/: celltype_modules_report.md  celltype_modules_summary.json
01_disease_map/celltype_modules/BCELL/: BCELL_metrics.json  BCELL_nodes.tsv  BCELL_reactions.tsv
01_disease_map/celltype_modules/M1/: M1_metrics.json  M1_nodes.tsv  M1_reactions.tsv
02_boolean_model/: attractor_summary.json  attractors_disease.tsv  attractors_disease_ag.tsv  attractors_disease_full.tsv  attractors_disease_ifn.tsv  attractors_healthy.tsv  audit_report.md  phenotype_signature_per_attractor.tsv  tool_choice.md
02_boolean_model/casq_output/: SjS_boolean.bnet  SjS_boolean_Model.csv  SjS_boolean_Species.csv  SjS_boolean_Transitions.csv
envs/: environment.yml
scripts/: 01_download_sjd_map.py  02_audit_map.py  03_dissociate.py  04_split_celltype.py  05_intercellular_edges.py  06_assemble_map.py  07_audit_rules.py  08_mpbn_attractors.py  09_pyboolnet_fixedpoints.py  10_filter_attractors.py
scripts/lib/: assembly.py  celldesigner_xml.py  celltype_module.py  dissociator.py  intercellular.py  map_audit.py  minerva_api.py  node_classifier.py  refinement.py
tests/: test_smoke.py
(+28 files in other folders)
