[project]
name = "sjs-digitaltwin"
version = "0.1.0"
description = "Boolean immune digital twin of the salivary gland in Sjogren's disease"
requires-python = ">=3.12"
authors = [
    { name = "Nathan Foulquier", email = "nathan.foulquier@chu-brest.fr" },
]
license = { text = "MIT" }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
    "venv",
    ".venv",
    "__pycache__",
    "01_disease_map/cache",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803"]  # test names allowed snake_case anything
"scripts/**" = ["N999"]         # numbered script names like 01_download.py

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
show_error_codes = true

[[tool.mypy.overrides]]
module = [
    "casq.*",
    "libsbml.*",
    "pyboolnet.*",
    "mpbn.*",
    "maboss.*",
    "biolqm.*",
    "colomoto.*",
    "reactome2py.*",
    "gseapy.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "slow: marks tests as slow (deselect with -m 'not slow')",
    "network: marks tests that require network access",
]
